# pycds

./: .gitignore  .travis.yml  Jenkinsfile  MANIFEST.in  Makefile  NEWS.md  NEWS.rst  Pipfile  README.md  README.rst  alembic.ini  create_crmp_subset.sql  dev.Dockerfile  pyproject.toml  pytest.ini  requirements.txt  run-docker-test-db.sh  setup.py  test_requirements.txt  tox.ini
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/workflows/: code-format-check.yml  docker-publish.yml  pypi-publish.yml  python-ci-partial.yml  python-ci.yml
alembic/: README.md  env.py  replaceable_objects.py
alembic/development/: autogen.sh  down-docker-test-db.sh  run-docker-test-db.sh
alembic/versions/: 4a2f1879293a_create_functions.py  522eed334c85_create_initial_database.py  84b7fc2596d5_add_utility_views.py
docker/local-pytest/: Dockerfile  README.md  entrypoint.sh
docker/local-test/: Dockerfile  README.md  entrypoint.sh
docker/test-db/: Dockerfile  README.md  run-db.sh
docs/: alembic-extensions.md  background.md  bookmarks.md  database-maintenance.md  history-tracking-overview.excalidraw  history-tracking.md  installation.md  orm.md  project-unit-tests.md  scripts.md  sqlalchemy-extensions.md  test-migrations.md
docs/database-operations/: create-initial-migration.md  create-new-db.md  create-new-migration.md  introduction.md  migrate-downgrade.md  migrate-upgrade.md
docs/dev-notes/: OLD-managing-non-mutable.md  alembic-extensions.md  sqlalchemy-extensions.md
docs/dev-notes/migrations/: create-new-migration.md  important-notes.md  introduction.md
docs/testing/: project-unit-tests.md  unit-tests-in-client-code.md
init_test_db/: 01_roles.sql  02_create_db.sql  03_roles_search_path.sql
jenkins/: Dockerfile  Jenkinsfile
migration-verification/obs_raw-hx-tracking/: README.md  history-behaviour.sh  history-equality.sh  history-ordering.sh  insert-performance-test.sh  networks-query.sql  nsv-post.sh  nsv-pre.sh  stations-query.sql  variables-query.sql
pycds/: __init__.py  climate_baseline_helpers.py  context.py  database.py  functions.py  manage_views.py  materialized_view_helpers.py  orm.py  replaceable_objects.py  stored_procedures.py  util.py  view_helpers.py  views.py  weather_anomaly.py
pycds/alembic/: change_history.py  change_history_utils.py  env.py  helpers.py  info.py  util.py
pycds/alembic/extensions/: operation_plugins.py  replaceable_objects.py  special_operations.py
pycds/alembic/versions/: 081f17262852_convert_monthly_total_precipitation_mv_.py  0d99ba90c229_create_missing_indexes.py  22819129a609_convert_collapsed_vars_mv_to_native_.py  2914c6c8a7f9_add_drop_meta_climo_attrs.py  33179b5ae85a_add_network_display_name_column_to_meta_network.py  33179b5ae85a_add_network_key_column_to_meta_network.py  3505750d3416_add_start_stop_times_to_vars_per_.py  3d50ec832e47_add_constraint_on_meta_vars.py  434b4a868241_add_metadata_change_history.py  4a2f1879293a_create_functions.py  4a2f1879293a_create_functions.pye  522eed334c85_create_initial_database.py  5c841d2c01d1_reject_whitespace_on_meta_vars.py  6cb393f711c3_update_crmpnetworkgeoserver.py  7244176be9fa_apply_hx_tracking_to_multi_climo_normals.py  758be4f4ce0f_support_multiple_climatological_normals.py  78260d36e42b_add_net_var_name_valid_identifier_check.py  7a3b247c577b_add_varsperhistory_native_matview.py  7ab87f8fbcf4_add_change_history_utilities.py  7b139906ac46_add_not_null_constraint_on_meta_vars.py  83896ee79b06_add_function_variable_tags.py  84b7fc2596d5_add_utility_views.py  879f0efa125f_add_column_on_meta_station.py  879f0efa125f_add_publish_column_to_meta_station.py  8c05da87cb79_add_hx_tkg_to_obs_raw.py  8fd8f556c548_add_weather_anomaly_matviews.py  96729d6db8b3_convert_climo_obs_count_mv_to_native_.py  (+11 more)
pycds/change_history/: tables.py
pycds/data/: crmp_subset_data.sql  data_758be4f4ce0f.sql  data_base.sql
pycds/materialized_views/: __init__.py  version_7a3b247c577b.py
pycds/orm/: tables.py  versioning.py  view_base.py
pycds/replaceable_objects/: __init__.py  materialized_views.py  stored_procedures.py  views.py
pycds/scripts/: manage_views.py
pycds/sqlalchemy/: ddl_extensions.py
pycds/utility_views/: __init__.py  version_84b7fc2596d5.py
pycds/weather_anomaly/: __init__.py  version_8fd8f556c548.py
scripts/: Demo.ipynb  demo.py  format-pytest-describe.py  format-pytest.py  load-climate-baseline-values.py  manage-views.py  mktestdb.py  refresh-matviews.py  verify-load-climate-baseline-values.py
scripts/climate_baseline/: load-climate-baseline-values.py
scripts/weather_anomaly/: deploy_all_views.py  refresh_all_mat_views.py  views.py
tests/: alembicverify_util.py  conftest.py  context.py  helpers.py  pytest.ini  test_climate_baseline_helpers.py  test_contacts.py  test_daily_temperature_extrema.py  test_daily_temperature_statistics.py  test_db_fixture.py  test_functions.py  test_geo.py  test_manage_views.py  test_materialized_view_helpers.py  test_monthly_avgs_of_daily_temp_extrema.py  test_monthly_total_precipitation.py  test_session_setups.py  test_testdb.py  test_unique_constraints.py  test_util.py  test_view.py  test_view_helpers.py  test_views.py  test_wa_monthly_views_common.py
tests/alembic_migrations/: alembicverify_util.py  conftest.py  helpers.py  sqlalchemydiff_util.py  status.md  test_check_migration_version.py  test_helpers.py  test_migrations.py  test_warnings.py
tests/basics/: conftest.py  test_contacts.py  test_db_fixture.py  test_geo.py  test_testdb.py  test_unique_constraints.py  test_util.py
tests/behavioural/: conftest.py
tests/climate_baseline_helpers/: common.py  conftest.py  test_climate_baseline_helpers.py
tests/db_helpers/: alembic_verify.py  data_dbs.py  db.py  postgres_factory.py  pytest_alembic.py
tests/functions/: test_effective_day.py
tests/manage_views/: conftest.py  test_manage_views.py
tests/view_helpers/: conftest.py  content.py  test_materialized_view_helpers.py  test_view_helpers.py
tests/views/: conftest.py  test_views.py
tests/weather_anomaly/: conftest.py  test_wa_xxx.py
(+226 files in other folders)
