[build-system]
requires = [
    "setuptools >= 40.9.0", "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pycds*"]

[tool.setuptools]
# By default, include-package-data is true, so this line is unnecessary but reassuring.
include-package-data = true
zip-safe = true

[tool.setuptools.package-data]
pycds = ["data/crmp_subset_data.sql"]

[project]
name = "PyCDS"
version = "4.0.1"
description = "An ORM representation of the PCDS and CRMP database"
keywords = ["sql", "database", "pcds", "crmp", "climate", "meteorology"]
requires-python = ">=3.8"
authors = [
    {name = "James Hiebert", email = "hiebert@uvic.ca"},
    {name = "Rod Glover", email = "rglover@uvic.ca"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: Internet",
    "Topic :: Scientific/Engineering",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "alembic == 1.5.2",
    "black == 19.10b0",
    "geoalchemy2",
    "psycopg2",
    "SQLAlchemy == 1.4.15",
    "sqlalchemy-citext",
]

[project.optional-dependencies]
test = [
    "alembic-verify == 0.1.4",  # loosen?
    "pytest",
    "pytest-describe",
    "pytest-mock",
    "sqlalchemy-diff",
    "testing.postgresql",
    "zipp == 3.5.0",  # necessary? See https://github.com/pacificclimate/pycds/pull/104
]

[project.scripts]
# Does this actually work when manage-views is python file in a script dir?? Test!
# It doesn't.
# FIXME
# Deferred until later - Poetry may have a different requirement, although it seems unlikely.
#manage-views = "scripts.manage-views:main"
# It's not clear that any of the other scripts in script/ have any value.
# If they do, refactor them so that they can be called (move everything into
# a main() method without arguments) and add them here.

[project.urls]
homepage = "http://www.pacificclimate.org/"
repository = "https://github.com/pacificclimate/pycds"