[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pycds"
version = "4.3.0.dev1"
description = "An ORM representation of the PCDS and CRMP database"
license = "GPL-3.0-only"
authors = [
    "James Hiebert <hiebert@uvic.ca>",
    "Rod Glover <rglover@uvic.ca>",
]
readme = "README.md"
homepage = "http://www.pacificclimate.org/"
repository = "https://github.com/pacificclimate/pycds"
keywords = ["sql", "database", "pcds", "crmp", "climate", "meteorology"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet",
    "Topic :: Scientific/Engineering",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "pycds*" },
]
# Possibly unnecessary: see https://python-poetry.org/docs/pyproject/#include-and-exclude
#include = ["data/crmp_subset_data.sql"]

[tool.poetry.dependencies]
python = "^3.8"
alembic = ">=1.5.2,<1.6"
SQLAlchemy = ">=1.4.15,<2.0"
geoalchemy2 = "^0.13.3"
psycopg2 = "^2.9.6"
sqlalchemy-citext = "^1.8.0"

[tool.poetry.group.dev.dependencies]
#pytest = "^7.2.2"
alembic-verify = "0.1.4"  # loosen?
# Always pin Black to a specific version to ease the disruptions when its default
# behaviour changes.
black = "23.3.0"
pytest = "^7.4.0"
pytest-describe = "^2.1.0"
pytest-mock = "^3.11.1"
testing-postgresql = "^1.3.0"
sqlalchemy-diff = "^0.1.5"

[tool.poetry.scripts]
manage-views = "pycds.scripts.manage_views:main"
