[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "pycds"
version = "4.5.1"
requires-python = ">=3.9,<3.14"
readme = "README.md"
description = "An ORM representation of the PCDS and CRMP database"
license = { text = "GPL-3.0-only" }
authors = [
  { name = "James Hiebert", email = "hiebert@uvic.ca" },
  { name = "Rod Glover", email = "rglover@uvic.ca" }
]
keywords = ["sql", "database", "pcds", "crmp", "climate", "meteorology"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet",
  "Topic :: Scientific/Engineering",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
  "alembic>=1.5.2,<1.6",
  "SQLAlchemy>=1.4.15,<2.0",
  "geoalchemy2>=0.13.3,<1.0.0",
  "psycopg2>=2.9.6,<3.0.0",
  "sqlalchemy-citext>=1.8.0,<2.0.0",
  "black>=25.1.0,<26.0.0",
  "pytest-alembic (>=0.12.0,<0.13.0)"
]

[project.optional-dependencies]
dev = [
  "alembic-verify>=0.1.4,<0.2.0",
  "black>=24.3.0",
  "pytest>=7.4.0",
  "pytest-describe>=2.1.0",
  "pytest-mock>=3.11.1",
  "testing-postgresql>=1.3.0",
  "setuptools>=72.2.0",
  "sqlalchemy-diff>=0.1.5",
]

[project.scripts]
manage-views = "pycds.scripts.manage_views:main"

[project.urls]
homepage = "https://www.pacificclimate.org/"
repository = "https://github.com/pacificclimate/pycds"

[tool.pytest.ini_options]
filterwarnings =  "ignore:datetime.datetime"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "thisone: no idea what this is",
    "update20: marks tests that have been updated to 2.0 compatible"
]
pytest_alembic_include_experimental = "downgrade_leaves_no_trace"
